force-app/main/default/objects/geopointe__GP_Route_Plan_Config_Batch_Job__c/geopointe__GP_Route_Plan_Config_Batch_Job__c.object-meta.xml
<CustomObject>
    <description>Stores data for the batch job from one route plan configuration.</description>
    <label>Geopointe Route Plan Config Batch Job</label>
    <nameField>
        <label>Route Plan Batch Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Route Plan Config Batch Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>