force-app/main/default/objects/geopointe__GP_Route_Plan_Config_Batch_Job__c/fields/geopointe__Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Batch_Job_Id__c</fullName>
    <label>Batch Job Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>