force-app/main/default/objects/geopointe__GP_Route_Plan_Config_Batch_Job__c/fields/geopointe__Completed__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Completed__c</fullName>
    <label>Completed</label>
    <type>DateTime</type>
</CustomField>