force-app/main/default/objects/geopointe__GP_Route_Plan_Config_Batch_Job__c/fields/geopointe__Errored_Optimizations__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Errored_Optimizations__c</fullName>
    <label>Errored Optimizations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>