force-app/main/default/objects/geopointe__GP_Route_Plan_Config_Batch_Job__c/fields/geopointe__Geopointe_Route_Plan_Configuration__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geopointe_Route_Plan_Configuration__c</fullName>
    <label>Geopointe Route Plan Configuration</label>
    <referenceTo>geopointe__GP_Route_Plan_Configuration__c</referenceTo>
    <relationshipLabel>Geopointe Route Plan Config Batch Jobs</relationshipLabel>
    <relationshipName>Route_Plan_Config_Batch_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>