force-app/main/default/objects/geopointe__GP_Route_Plan_Config_Batch_Job__c/fields/geopointe__Status__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>