force-app/main/default/objects/geopointe__GP_Route_Plan_Config_Batch_Job__c/fields/geopointe__Submitted__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Submitted__c</fullName>
    <label>Submitted</label>
    <type>DateTime</type>
</CustomField>